--- a/vignettes/rmm_workflowWithExampleRangeModel.Rmd
+++ b/vignettes/rmm_workflowWithExampleRangeModel.Rmd
@@ -9,8 +9,10 @@ output:
     toc_depth: 3
 vignette: >
   %\VignetteIndexEntry{An example workflow for building rangeModelMetadata objects}
-  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -66,7 +68,7 @@ bg <- dismo::randomPoints(bg.ext[[9]], n=10000)
 
 ```{r}
 # run ENMeval
-e <- ENMeval::ENMevaluate(occs, bg.ext, bg, method='block', RMvalues=1:3, fc=c('L','LQ'), algorithm='maxnet')
+e <- ENMeval::ENMevaluate(occs, bg.ext, bg, method='block', RMvalues=1:3, fc=c('L','LQ'), algorithm='maxent.jar')
 ```
 
 # Model performance
@@ -83,7 +85,9 @@ m <- e@models[[i]]
 #p <- predict(m, bg.ext, args=c("outputformat=cloglog"))
 notNA <- complete.cases(values(bg.ext))
 tmp <- predict(m, values(bg.ext)[notNA,], type='link')
-p <- bg.ext[[1]]; values(p)=NA; values(p)[notNA]=tmp
+p <- bg.ext[[1]] 
+values(p) <- NA 
+values(p)[notNA] <- tmp
 plot(p)
 # further south extent for model transfer
 t.bb <- raster::extent(-80,-40,-60,-30)
@@ -96,7 +100,9 @@ t.ext <- raster::crop(envs, t.bb)
 notNA.t <- complete.cases(values(t.ext))
 #p.t <- predict(m, t.ext, args=c("outputformat=cloglog"))
 tmp <- predict(m, values(t.ext)[notNA.t,], type='link')
-p.t <- t.ext[[1]]; values(p.t)=NA; values(p.t)[notNA.t]=tmp
+p.t <- t.ext[[1]] 
+values(p.t) <- NA 
+values(p.t)[notNA.t] <- tmp
 plot(p.t)
 ```
 
@@ -119,12 +125,12 @@ To make it easier to fill some `rmm` fields, we provide autofill functions that 
 
 ```{r}
 # occurrence data
-rmm <- rmmAutofillspocc(rmm,bv$gbif) 
+rmm <- rmmAutofillspocc(rmm, bv$gbif) 
 # autofill info for environmental rasters used for model training and transfer
-rmm <- rmmAutofillEnvironment(rmm,bg.ext, transfer=0) 
-rmm <- rmmAutofillEnvironment(rmm,t.ext, transfer=1)
+rmm <- rmmAutofillEnvironment(rmm, bg.ext, transfer=0) 
+rmm <- rmmAutofillEnvironment(rmm, t.ext, transfer=1)
 # autofill for ENMeval
-rmm <- rmmAutofillENMeval(rmm,e, 
+rmm <- rmmAutofillENMeval(rmm, e, 
                        selectionCriteria="highest mean test AUC",
                        optimalModelIndex=i) 
 # R packages used
